# fluid

./: .gitignore  CMakeLists.txt  Makefile  blas.cpp  blas.h  blatt1.cpp  blatt2.cpp  blatt3.cpp  differences.cpp  gradientField.vtk  matrix.cpp  matrix.h  real.cpp  real.h  vector.cpp  vector.h  vectorField.vtk
include/: blas.h  config.h  differences.h  field.h  geometry.h  matrix.h  parallel.h  real.h  solvers.h  specialBoundary.h  tracing.h  vector.h  velocity.h
input/: config  config_DRIVEN_CAVITY  config_KARMAN  config_STEP  sinusField.vtk
output/DRIVEN_CAVITY/: Pressure-Re10.000000_1.vtk  Pressure-Re10.000000_10.vtk  Pressure-Re10.000000_11.vtk  Pressure-Re10.000000_12.vtk  Pressure-Re10.000000_13.vtk  Pressure-Re10.000000_14.vtk  Pressure-Re10.000000_15.vtk  Pressure-Re10.000000_16.vtk  Pressure-Re10.000000_17.vtk  Pressure-Re10.000000_18.vtk  Pressure-Re10.000000_19.vtk  Pressure-Re10.000000_2.vtk  Pressure-Re10.000000_20.vtk  Pressure-Re10.000000_21.vtk  Pressure-Re10.000000_22.vtk  Pressure-Re10.000000_23.vtk  Pressure-Re10.000000_24.vtk  Pressure-Re10.000000_25.vtk  Pressure-Re10.000000_26.vtk  Pressure-Re10.000000_27.vtk  Pressure-Re10.000000_28.vtk  Pressure-Re10.000000_29.vtk  Pressure-Re10.000000_3.vtk  Pressure-Re10.000000_30.vtk  Pressure-Re10.000000_31.vtk  Pressure-Re10.000000_32.vtk  Pressure-Re10.000000_33.vtk  Pressure-Re10.000000_34.vtk  Pressure-Re10.000000_35.vtk  Pressure-Re10.000000_36.vtk  Pressure-Re10.000000_37.vtk  Pressure-Re10.000000_38.vtk  Pressure-Re10.000000_39.vtk  Pressure-Re10.000000_4.vtk  Pressure-Re10.000000_40.vtk  Pressure-Re10.000000_41.vtk  Pressure-Re10.000000_42.vtk  Pressure-Re10.000000_43.vtk  Pressure-Re10.000000_44.vtk  Pressure-Re10.000000_45.vtk  (+62 more)
output/KARMAN/: Pressure-Re10000.000000_1.vtk  Pressure-Re10000.000000_10.vtk  Pressure-Re10000.000000_11.vtk  Pressure-Re10000.000000_12.vtk  Pressure-Re10000.000000_13.vtk  Pressure-Re10000.000000_14.vtk  Pressure-Re10000.000000_15.vtk  Pressure-Re10000.000000_16.vtk  Pressure-Re10000.000000_17.vtk  Pressure-Re10000.000000_18.vtk  Pressure-Re10000.000000_19.vtk  Pressure-Re10000.000000_2.vtk  Pressure-Re10000.000000_20.vtk  Pressure-Re10000.000000_21.vtk  Pressure-Re10000.000000_22.vtk  Pressure-Re10000.000000_23.vtk  Pressure-Re10000.000000_24.vtk  Pressure-Re10000.000000_25.vtk  Pressure-Re10000.000000_26.vtk  Pressure-Re10000.000000_27.vtk  Pressure-Re10000.000000_28.vtk  Pressure-Re10000.000000_29.vtk  Pressure-Re10000.000000_3.vtk  Pressure-Re10000.000000_30.vtk  Pressure-Re10000.000000_31.vtk  Pressure-Re10000.000000_32.vtk  Pressure-Re10000.000000_33.vtk  Pressure-Re10000.000000_34.vtk  Pressure-Re10000.000000_35.vtk  Pressure-Re10000.000000_36.vtk  Pressure-Re10000.000000_37.vtk  Pressure-Re10000.000000_38.vtk  Pressure-Re10000.000000_39.vtk  Pressure-Re10000.000000_4.vtk  Pressure-Re10000.000000_40.vtk  Pressure-Re10000.000000_41.vtk  (+67 more)
src/: blas.cpp  config.cpp  differences.cpp  field.cpp  geometry.cpp  matrix.cpp  parallel.cpp  real.cpp  solvers.cpp  specialBoundary.cpp  tracing.cpp  vector.cpp  velocity.cpp
(+103 files in other folders)
